--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -82,12 +82,23 @@ only screen and (min-device-pixel-ratio: 1.5)
 {
   .main-cta .plane-box{background-image: url('../images/plane@2x.png');background-size:374px;}
 }
-.main-cta .aniversary-box{float:left;width:415px;-webkit-border-radius:2px;border-radius:2px;padding:70px 30px 35px 30px;margin:95px 0 0 0;text-align:center;background-color:#fff;position:relative;}
-.main-cta .aniversary-box H2{font:normal 55px 'latoheavy', arial, helvetica, sans-serif;color:#2a9efc;margin:0 0 10px 0;line-height:40px;margin:0 0 25px 0;}
+.main-cta .aniversary-box{float:left;width:415px;padding:70px 30px 35px 30px;margin:95px 0 0 0;text-align:center;-webkit-border-radius:2px;border-radius:2px;position:relative;background-color:#fff;}
+.main-cta .aniversary-box UL{list-style:none;z-index:100;background-color:transparent;position:relative;}
+.main-cta .aniversary-box H2{font:normal 54px 'latoheavy', arial, helvetica, sans-serif;color:#2a9efc;margin:0 0 10px 0;line-height:40px;margin:0 0 25px 0;}
 .main-cta .aniversary-box H3{font:normal 45px 'latolight', arial, helvetica, sans-serif;color:#242834;margin:0 0 -10px 0;line-height:52px;margin:0 0 15px 0;}
 .main-cta .aniversary-box A{font:normal 15px 'latoheavy', arial, helvetica, sans-serif;color:#242834;text-transform:uppercase;text-decoration:none;letter-spacing:2px;}
-.main-cta .aniversary-box:hover{cursor:pointer; color:#2a9efc;}
-.confetti{position:absolute;top:-66px;left:-25px;display:block;width:475px;height:436px;background:transparent url('../images/confetti@2x.png') no-repeat 0 0;background-size:475px;z-index:100;}
+.main-cta .aniversary-box A:hover{color:#2a9efc;}
+.miniplane{display:block;width:415px;height:135px;position:absolute;top:-66px;left:0;right:0;margin-left:0;margin-right:0;background:transparent url('../images/plane.png') no-repeat top center;background-size:133px;}
+.confetti-circle{display:block;width:13px;height:13px;position:absolute;background:transparent url('../images/confetti@2x.png') no-repeat;background-size:71px;}
+.circle-blue-one{top:120px;left:-34px;background-position:-58px 0;}
+.circle-blue-two{top:-24px;right:110px;background-position:-58px 0;}
+.circle-yellow-one{top:33px;left:35px;background-position:-32px 0;}
+.circle-yellow-two{top:108px;right:23px;background-position:-32px 0;}
+.circle-red-one{bottom:-45px;left:158px;background-position:-45px 0;}
+.circle-red-two{bottom:81px;right:-26px;background-position:-45px 0;}
+.confetti-semicircle{display:block;position:absolute;background:transparent url('../images/confetti@2x.png') no-repeat;background-size:71px;}
+.semicircle-blue-one{bottom:-12px;right:60px;background-position:0 0;width:12px;height:22px;}
+.semicircle-yellow-one{bottom:16px;left:50px;background-position:-12px 0;width:20px;height:14px;}
 .main-cta .main-heading{float:right;width:485px;padding:75px 0 0 0;}
 .main-cta .main-heading H1{color:#242834;font:normal 50px 'latosemibold', arial, helvetica, sans-serif;line-height:120%;margin:30px 0 35px 0;}
 .main-cta .main-heading UL{list-style:none;overflow:hidden;}
